--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.14.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.1",
+    "react-dock": "^0.6.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.0",
